# robotics_and_learning_projects

./: readme.MD
classical_controls/state_space/: double_integrator_MPC.py  state_space_review.MD
cpp_testing/: a.out  cpp_fundementals.MD
cpp_testing/test_examples/: a.out  composition_vs_inheritance.cpp  const_correctness.cpp  copy_constructor.cpp  modern_cpp_play.cpp  notification_system_polymorphism.cpp  object_ortiented.cpp  scope_exit.cpp  smart_pointers.cpp  smart_ptr_creation.cpp  stack_v_heap  stack_v_heap.cpp  template_practice.cpp  test_base_class_virtual_destructor.cpp
data_structure_and_algorithms/: dsa_concepts.MD
data_structure_and_algorithms/arrays_and_strings/: a.out  longest_substring_w_o_repeating_chars.cpp  pairwise_sum.cpp  partitioning_example.cpp  remove_duplicates_inline.cpp
data_structure_and_algorithms/dynamic_programming/examples/: a.out  longest_subsequence.cpp
learning_rl/: .gitignore  setup.py
learning_rl/algorithms/: basic_pg.py  basic_pg_rtg.py
learning_rl/helpers/: networks.py
learning_rl/learning_rl/algorithms/: basic_pg.py  basic_pg_rtg.py  vanilla_pg.py
learning_rl/learning_rl/playspace/: open_ai_gym.ipynb  torch_categorical.ipynb
learning_rl/playspace/: open_ai_gym.ipynb
motion_planning/: key_concepts.md
open_cv_qr_reader/: CMakeLists.txt
open_cv_qr_reader/src/: main.cpp
system_design/: system_design.md
system_design/examples/: a.out  cross_platform_audio_player.cpp  decorator_example.cpp  drone_mission_controller_command.cpp  logger_singleton.cpp  mobile_robots_and_controllers.cpp  more_SOLID_principles.cpp  path_tracking_stategy.cpp  request_builder.cpp  robot_composite.cpp  robotics_SOLID_principles.cpp  sensor_adapter.cpp  sensor_reader_SOLID.cpp  shape_factory.cpp  telemetry_hub_observer.cpp
tensorRT_inferencing/: CMakeLists.txt  main.cpp  onnx_parser.cpp  python_helper.py  trt_inference.cpp
uwrt_scripts/: time_checker.py
